// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MFA Security Key Successful displays MFA security key step 1`] = `
<body>
  <div>
    <div
      class="card__background bg-base-lightest"
    >
      <div
        class="grid-container maxw-mobile-lg usa-section"
      >
        <div
          class="card"
        >
          <header
            class="display-flex flex-column"
          >
            <img
              alt="SimpleReport logo"
              class="flex-align-self-center maxw-card-lg width-full"
              src="simplereport-logo-color.svg"
            />
            <div
              class="border-bottom border-base-lighter margin-x-neg-3 margin-top-3"
            />
          </header>
          <p
            class="font-ui-sm text-bold margin-top-3"
          >
            Set up your account
          </p>
          <div
            class="usa-step-indicator usa-step-indicator--counters-sm usa-step-indicator--no-labels margin-y-205"
          >
            <div
              class="usa-step-indicator__segments"
              role="presentation"
            >
              <div
                aria-current="false"
                class="usa-step-indicator__segment usa-step-indicator__segment--complete"
              >
                <span
                  class="usa-step-indicator__segment-label"
                >
                  Create your password
                   
                  <span
                    class="usa-sr-only"
                  >
                    completed
                  </span>
                </span>
              </div>
              <div
                aria-current="false"
                class="usa-step-indicator__segment usa-step-indicator__segment--complete"
              >
                <span
                  class="usa-step-indicator__segment-label"
                >
                  Select your security question
                   
                  <span
                    class="usa-sr-only"
                  >
                    completed
                  </span>
                </span>
              </div>
              <div
                aria-current="true"
                class="usa-step-indicator__segment usa-step-indicator__segment--current"
              >
                <span
                  class="usa-step-indicator__segment-label"
                >
                  Set up authentication
                   
                  <span
                    class="usa-sr-only"
                  >
                    completed
                  </span>
                </span>
              </div>
            </div>
            <div
              class="usa-step-indicator__header"
            >
              <h1
                class="usa-step-indicator__heading"
              >
                <span
                  class="usa-step-indicator__heading-counter"
                >
                  <span
                    class="usa-sr-only"
                  >
                    Step
                  </span>
                  <span
                    class="usa-step-indicator__current-step margin-right-05"
                  >
                    3
                  </span>
                  <span
                    class="usa-step-indicator__total-steps"
                  >
                    of 
                    3
                  </span>
                </span>
                <span
                  class="usa-step-indicator__heading-text"
                >
                  Set up authentication
                </span>
              </h1>
            </div>
          </div>
          <p
            class="margin-bottom-0"
          >
            How to register your security key.
          </p>
          <ol
            class="usa-list usa-hint font-ui-2xs"
          >
            <li>
              Continue to SimpleReport and log in.
            </li>
            <li>
              Find “Security Key or Biometric Authenticator” in the Okta multifactor authentication menu and click
               
              <span
                class="text-bold"
              >
                Setup
              </span>
              .
            </li>
            <li>
              Follow prompts to enroll.
            </li>
          </ol>
          <a
            class="margin-x-auto display-block width-fit-content usa-button usa-button--primary"
            href="/app/"
          >
            Continue to SimpleReport
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MFA Security Key Successful displays MFA security key step for unsupported browser 1`] = `
<body>
  <div>
    <div
      class="card__background bg-base-lightest"
    >
      <div
        class="grid-container maxw-mobile-lg usa-section"
      >
        <div
          class="card"
        >
          <header
            class="display-flex flex-column"
          >
            <img
              alt="SimpleReport logo"
              class="flex-align-self-center maxw-card-lg width-full"
              src="simplereport-logo-color.svg"
            />
            <div
              class="border-bottom border-base-lighter margin-x-neg-3 margin-top-3"
            />
          </header>
          <p
            class="font-ui-sm text-bold margin-top-3"
          >
            Unsupported browser
          </p>
          <p
            class="margin-bottom-0"
          >
            To register a security key, please use the latest version of a supported browser:
          </p>
          <ol
            class="usa-list usa-hint font-ui-2xs"
          >
            <li>
              Google Chrome
            </li>
            <li>
              Mozilla Firefox
            </li>
            <li>
              Microsoft Edge
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;
